# token-pet

./: .gitignore  README.md  index.html  menu.html  package-lock.json  package.json  renderer.js  style.css
scripts/: sync-dist.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
